Add scroll-snap demo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
   <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a>
   <li><a href="css-revert.html"><code>css-revert.html</code></a>
+  <li><a href="css-scroll-snap.html"><code>css-scroll-snap.html</code></a>
   <li><a href="css-svg-filter-1.html"><code>css-svg-filter-1.html</code></a> + <a href="css-svg-filter-2.html"><code>css-svg-filter-2.html</code></a>
   <li><a href="dom-insert.html"><code>dom-insert.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
