--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <li><a href="css-color.html"><code>css-color.html</code></a>
   <li><a href="css-color-functional-whitespace-syntax.html"><code>css-color-functional-whitespace-syntax.html</code></a>
   <li><a href="css-color-paste.html"><code>css-color-paste.html</code></a>
+  <li><a href="css-container-queries.html"><code>css-container-queries.html</code></a>
   <li><a href="css-escapes.html"><code>css-escapes.html</code></a>
   <li><a href="css-grid.html"><code>css-grid.html</code></a>
   <li><a href="css-grid-vertical.html"><code>css-grid-vertical.html</code></a>
@@ -26,6 +27,8 @@
   <li><a href="image-size.html"><code>image-size.html</code></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
   <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
+  <li><a href="limited-quirks-mode-image.html"><code>limited-quirks-mode-image.html</code></a> vs. <a href="standards-mode-image.html"><code>standards-mode-image.html</code></a>
+  <li><a href="quirks-mode-in-iframes.html"><code>quirks-mode-in-iframes.html</code></a></li>
   <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
   <li><a href="shadow-dom-focus.html"><code>shadow-dom-focus.html</code></a>
   <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
