Pages for CSS Authoring Hints

--- a/index.html
+++ b/index.html
@@ -36,4 +36,7 @@
   <li><a href="target-text.html"><code>target-text.html</code></a>
   <li><a href="variable-font.html"><code>variable-font.html</code></a>
   <li><a href="v8-compilation-cache.html"><code>v8-compilation-cache.html</code></a>
+  <li><a href="inactive-css.html"><code>inactive-css.html</code></a>
+  <li><a href="deprecated-css.html"><code>deprecated-css.html</code></a>
+  <li><a href="missing-vendor-prefixes.html"><code>missing-vendor-prefixes.html</code></a>
 </ul>
