Replaced spans with code tags

--- a/deprecated-css.html
+++ b/deprecated-css.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Deprecated CSS</title>
 <style> 
-  span {
+  code {
     color: red;  
   }
 
@@ -24,7 +24,7 @@
 
 <h1>Deprecated CSS</h1>
 
-<p><strong>grid-container</strong> here is using <span>grid-gap</span> property, which was renamed to <span>'gap'</span> in CSS3</p>
+<p><code>grid-container</code> here is using <code>grid-gap</code> property, which was renamed to <code>'gap'</code> in CSS3</p>
 
 <div class="grid-container">
   <div>Lorem</div>
