--- a/inactive-css.html
+++ b/inactive-css.html
@@ -17,14 +17,14 @@
     background-color: #4285F4;
   }
 
-  span {
+  code {
       color: red;
   }
 </style>
 
 <h1>Inactive CSS</h1>
 
-<p><strong>wrapper</strong> class here is using <span>flex-wrap</span>: nowrap rule, therefore <span>'align-content'</span> has no effect. <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/align-content">Learn More</a> </p>
+<p><code>wrapper</code> class here is using <code>flex-wrap</code>: nowrap rule, therefore <code>'align-content'</code> has no effect. <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/align-content">Learn More</a> </p>
 
 <div class="wrapper">
   <div></div>
