--- a/missing-vendor-prefixes.html
+++ b/missing-vendor-prefixes.html
@@ -14,13 +14,13 @@
     padding: 30px;
   }
 
-  span {
+  code {
       color: red;
   }
 </style>
 
 <h1>Missing Vendor Prefix</h1>
 
-<p><strong>div</strong> element here has <span>transition</span> property, but has no vendor-prefixed rules. <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transition">Learn More</a> </p>
+<p><code>div</code> element here has <code>transition</code> property, but has no vendor-prefixed rules. <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transition">Learn More</a> </p>
 
 <div>Hello World</div>
