--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <li><a href="dom-insert.html"><code>dom-insert.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
   <li><a href="idle-detector.html"><code>idle-detector.html</code></a>
+  <li><a href="iframe-navigations.html"><code>iframe-navigations.html</code></a></li>
   <li><a href="image-fallback.html"><code>image-fallback.html</code></a>
   <li><a href="image-size.html"><code>image-size.html</code></a>
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
