add an example with inactive width/height on an inline element

--- a/inactive-css.html
+++ b/inactive-css.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Inactive CSS</title>
-<style> 
+<style>
   .wrapper {
     width: 100px;
     height: 240px;
@@ -37,7 +37,7 @@
 <div class="wrapper">
   <div></div>
   <div></div>
-  <div></div>  
+  <div></div>
 </div>
 
 <h2>Other examples</h2>
@@ -79,3 +79,7 @@
 <div class="hint">
   <div style="z-index: 100;"></div>
 </div>
+
+<span class="hint">
+  test
+</span>
