Add a page with a fixed viewport

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <li><a href="css-scroll-snap.html"><code>css-scroll-snap.html</code></a>
   <li><a href="css-svg-filter-1.html"><code>css-svg-filter-1.html</code></a> + <a href="css-svg-filter-2.html"><code>css-svg-filter-2.html</code></a>
   <li><a href="dom-insert.html"><code>dom-insert.html</code></a>
+  <li><a href="fixed-viewport.html"><code>fixed-viewport.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
   <li><a href="idle-detector.html"><code>idle-detector.html</code></a>
   <li><a href="iframe-navigations.html"><code>iframe-navigations.html</code></a></li>
