add scroll-height demo

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
   <li><a href="limited-quirks-mode-image.html"><code>limited-quirks-mode-image.html</code></a> vs. <a href="standards-mode-image.html"><code>standards-mode-image.html</code></a>
   <li><a href="quirks-mode-in-iframes.html"><code>quirks-mode-in-iframes.html</code></a></li>
+  <li><a href="scroll-height.html"><code>scroll-height.html</code></a>
+  <li><a href="scroll-height-quirks.html"><code>scroll-height-quirks.html</code></a>
   <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
   <li><a href="shadow-dom-focus.html"><code>shadow-dom-focus.html</code></a>
   <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
