--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
   <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
   <li><a href="limited-quirks-mode-image.html"><code>limited-quirks-mode-image.html</code></a> vs. <a href="standards-mode-image.html"><code>standards-mode-image.html</code></a>
+  <li><a href="pdf.html"><code>pdf.html</code></a></li>
   <li><a href="quirks-mode-in-iframes.html"><code>quirks-mode-in-iframes.html</code></a></li>
   <li><a href="scroll-height.html"><code>scroll-height.html</code></a>
   <li><a href="scroll-height-quirks.html"><code>scroll-height-quirks.html</code></a>
