add a focus demo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <li><a href="dom-insert.html"><code>dom-insert.html</code></a>
   <li><a href="fixed-viewport.html"><code>fixed-viewport.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
+  <li><a href="has-focus.html"><code>has-focus.html</code></a>
   <li><a href="idle-detector.html"><code>idle-detector.html</code></a>
   <li><a href="iframe-navigations.html"><code>iframe-navigations.html</code></a></li>
   <li><a href="image-fallback.html"><code>image-fallback.html</code></a>
