add a bounding client rect test page

--- a/index.html
+++ b/index.html
@@ -8,42 +8,43 @@
   <li><a href="background.html"><code>background.html</code></a>
   <li><a href="color-vision-deficiency.html"><code>color-vision-deficiency.html</code></a>
   <li><a href="css-background-zoom.html"><code>css-background-zoom.html</code></a>
-  <li><a href="css-color.html"><code>css-color.html</code></a>
   <li><a href="css-color-functional-whitespace-syntax.html"><code>css-color-functional-whitespace-syntax.html</code></a>
   <li><a href="css-color-paste.html"><code>css-color-paste.html</code></a>
+  <li><a href="css-color.html"><code>css-color.html</code></a>
   <li><a href="css-container-queries.html"><code>css-container-queries.html</code></a>
   <li><a href="css-escapes.html"><code>css-escapes.html</code></a>
-  <li><a href="css-grid.html"><code>css-grid.html</code></a>
   <li><a href="css-grid-vertical.html"><code>css-grid-vertical.html</code></a>
+  <li><a href="css-grid.html"><code>css-grid.html</code></a>
   <li><a href="css-insertrule.html"><code>css-insertrule.html</code></a>
   <li><a href="css-missing-unit.html"><code>css-missing-unit.html</code></a>
   <li><a href="css-nested.html"><code>css-nested.html</code></a>
   <li><a href="css-revert.html"><code>css-revert.html</code></a>
   <li><a href="css-scroll-snap.html"><code>css-scroll-snap.html</code></a>
   <li><a href="css-svg-filter-1.html"><code>css-svg-filter-1.html</code></a> + <a href="css-svg-filter-2.html"><code>css-svg-filter-2.html</code></a>
+  <li><a href="deprecated-css.html"><code>deprecated-css.html</code></a>
   <li><a href="dom-insert.html"><code>dom-insert.html</code></a>
   <li><a href="fixed-viewport.html"><code>fixed-viewport.html</code></a>
   <li><a href="font-stack.html"><code>font-stack.html</code></a>
+  <li><a href="get-bounding-client-rect.html">get-bounding-client-rect.html</a></li>
   <li><a href="has-focus.html"><code>has-focus.html</code></a>
   <li><a href="idle-detector.html"><code>idle-detector.html</code></a>
   <li><a href="iframe-navigations.html"><code>iframe-navigations.html</code></a></li>
   <li><a href="image-fallback.html"><code>image-fallback.html</code></a>
   <li><a href="image-size.html"><code>image-size.html</code></a>
-  <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
-  <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
-  <li><a href="limited-quirks-mode-image.html"><code>limited-quirks-mode-image.html</code></a> vs. <a href="standards-mode-image.html"><code>standards-mode-image.html</code></a>
-  <li><a href="pdf.html"><code>pdf.html</code></a></li>
-  <li><a href="quirks-mode-in-iframes.html"><code>quirks-mode-in-iframes.html</code></a></li>
-  <li><a href="scroll-height.html"><code>scroll-height.html</code></a>
-  <li><a href="scroll-height-quirks.html"><code>scroll-height-quirks.html</code></a>
-  <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
-  <li><a href="shadow-dom-focus.html"><code>shadow-dom-focus.html</code></a>
-  <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
-  <li><a href="target.html"><code>target.html</code></a>
-  <li><a href="target-text.html"><code>target-text.html</code></a>
-  <li><a href="variable-font.html"><code>variable-font.html</code></a>
-  <li><a href="v8-compilation-cache.html"><code>v8-compilation-cache.html</code></a>
   <li><a href="inactive-css.html"><code>inactive-css.html</code></a>
-  <li><a href="deprecated-css.html"><code>deprecated-css.html</code></a>
+  <li><a href="late-meta-charset.html"><code>late-meta-charset.html</code></a> + <a href="missing-meta-charset.html"><code>missing-meta-charset.html</code></a>
+  <li><a href="limited-quirks-mode-image.html"><code>limited-quirks-mode-image.html</code></a> vs. <a href="standards-mode-image.html"><code>standards-mode-image.html</code></a>
   <li><a href="missing-vendor-prefixes.html"><code>missing-vendor-prefixes.html</code></a>
+  <li><a href="pdf.html"><code>pdf.html</code></a></li>
+  <li><a href="quirks-mode-body.html"><code>quirks-mode-body.html</code></a> vs. <a href="standards-mode-body.html"><code>standards-mode-body.html</code></a>
+  <li><a href="quirks-mode-in-iframes.html"><code>quirks-mode-in-iframes.html</code></a></li>
+  <li><a href="scroll-height-quirks.html"><code>scroll-height-quirks.html</code></a>
+  <li><a href="scroll-height.html"><code>scroll-height.html</code></a>
+  <li><a href="shadow-dom-focus.html"><code>shadow-dom-focus.html</code></a>
+  <li><a href="shadow-dom.html"><code>shadow-dom.html</code></a>
+  <li><a href="state-pseudo.html"><code>state-pseudo.html</code></a>
+  <li><a href="target-text.html"><code>target-text.html</code></a>
+  <li><a href="target.html"><code>target.html</code></a>
+  <li><a href="v8-compilation-cache.html"><code>v8-compilation-cache.html</code></a>
+  <li><a href="variable-font.html"><code>variable-font.html</code></a>
 </ul>
