--- a/get-bounding-client-rect.html
+++ b/get-bounding-client-rect.html
@@ -19,7 +19,7 @@
   const button = document.querySelector('button');
   button.addEventListener('click', () => {
     const rect = document.querySelector('button').getBoundingClientRect()
-    alert(['>>> Button clicked [x:', rect.x, 'y:', rect.y, 'width:', rect.width, 'height:', rect.height].join(' '));
+    alert(['>>> Button clicked [x:', rect.x, 'y:', rect.y, 'width:', rect.width, 'height:', rect.height, ']'].join(' '));
   });
 </script>
 
